Fix product image not stretching to its bounds

--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -5,7 +5,7 @@
 }
 
 .productImageLarge {
-    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
